# bupt_final

./: .gitignore  AC.h  BitSet.h  Buffer.h  CMakeLists.txt  CircularQueue.h  Huffman.h  Log.h  README.md  ReadAndWriteFile.h  SetOptions.h  bestPairs.txt.cpp  cnt.cpp  findPattern.cpp  find_mode_str.cpp  main.cpp
data/: config2.txt  defaultConfig.txt
doc/: diary.md  rfc1952.md
doc/mid/: report.tex
include/: AC.h  Buffer.h  CircularQueue.h  CompressBuffer.h  Huffman.h  INFO.h  InputBuffer.h  KMP.h  Log.h  OutputBuffer.h  PatternStr.h  ProgressBar.h  SetOptions.h  Zip.h  ZlibBuffer.h
test/: AC_test.cpp  SpeedTest.cpp  TestCompressionRatio.cpp  huffman_test.cpp
